[package]
name = "shiguredo_sysroot"
version = "2026.1.0-canary.1"
edition = "2024"
rust-version = "1.88"
authors = ["Shiguredo Inc."]
license = "Apache-2.0"
description = "cargo subcommand for generating cross compile sysroot"
homepage = "https://github.com/shiguredo/cargo-sysroot"
repository = "https://github.com/shiguredo/cargo-sysroot"
readme = "README.md"

[[bin]]
name = "cargo-shiguredo-sysroot"
path = "src/main.rs"

[dependencies]
noargs = "0.4.2"
nojson = "0.3.6"
shiguredo_toml = "2026.1.0"

[dev-dependencies]
proptest = "1"
